# hakei

./: .gitignore  LICENSE  README.md  _quarto.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: concepts.qmd  index.qmd
hakei/: __init__.py  __main__.py  config.py  settings.py
hakei/instruments/: __init__.py  base.py  device.py  oscilloscope.py  power_supply.py  registry.py  registry.yaml  waveform_generator.py
hakei/instruments/digilent/: __init__.py  device.py  dwf.py  oscilloscope.py  power_supply.py  scanner.py  waveform_generator.py
hakei/instruments/dummy/: __init__.py  device.py  oscilloscope.py  power_supply.py  waveform_generator.py
hakei/instruments/scanner/: __init__.py  base.py  digilent.py  dummy.py  visa.py
hakei/ui/: __init__.py  device_panel.py  fdialog.py  instrument_panel.py  layout.py  menu.py  theme.py
hakei/ui/views/: __init__.py  base.py  oscilloscope.py  power_supply.py  waveform_gen.py
